--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -922,9 +922,7 @@
    "metadata": {},
    "source": [
     "**Answer: ** The final model chosen is Logistic Regression. \n",
-    "The logistic regression predicts the target variable by passing the likelihood occurance of the event to a logarthmic function.\n",
-    "It first multiplies features with weights and add them up, then a function is applied to the sum. If the function output is large enough, then the classifier would positively relate it with a certain label.\n",
-    "There is an objective score to measure how the classifier performs. During training, the predictions are compared to true labels to provide feedback, then the weights are updated in order to get a better score in following predictions.\n"
+    "Logistic regression does not predict the value of the output instead the output is a probability that the given input point belongs to a certain class. The main assumption of logistic regression is that the input space can be seperated into 2 regions, so the data is said to linearly seperable i.e data can be divided either by a line or a plane.Logistic regression uses the natural logarithm function to find the relationship between the variables and uses test data to find the coefficients. The function can then predict the future results using these coefficients in the logistic equation."
    ]
   },
   {
